ya entendi a hacer pull

--- a/style.css
+++ b/style.css
@@ -751,7 +751,7 @@ header .navbar {
   align-items: center;
   gap: 50px; 
   margin: 40px 200px 40px 200px; 
-
+}
 .Cont {
   display: flex;
   flex-direction: column; 
