--- a/app/templates/Index.html
+++ b/app/templates/Index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CodeMakers JM</title>
-    <link rel="shortcut icon" href="/Media/Icono.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='Media/Icono.ico') }}" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   </head>
   <body>
     <header>
@@ -56,7 +56,7 @@
             </div>
           </div>
           <div class="hero-image-wrapper">
-            <img src="Media/image.png" alt="Coffee" class="hero-image" /> 
+            <img src="{{ url_for('static', filename='Media/image.png') }}" alt="Coffee" class="hero-image">
           </div>
         </div>
       </section>
@@ -204,6 +204,6 @@ function enableZoom(element) {
     </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
-    <script src="script.js"></script>
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
   </body>
 </html>
