--- a/app/templates/Index.html
+++ b/app/templates/Index.html
@@ -47,11 +47,11 @@
         <div class="section-content">
           <div class="hero-details">
             <h2 class="title">CodeMakers JM</h2>
-            <h3 class="subtitle">Innovación y diseño web que se adaptan a tus necesidades!</h3>
+            <h3 class="subtitle">Transformamos tus ideas en soluciones web innovadoras</h3>
             <p class="description">Ofrecemos soluciones personalizadas en la creación de páginas web, enfocándonos en la calidad y la originalidad.</p>
 
             <div class="buttons">
-              <a href="#" class="button order-now">Order Now</a>
+              <a href="#projects-section" class="button order-now">Ver portafolio</a>
               <a href="#contact" class="button contact-us">Contact Us</a>
             </div>
           </div>
