--- a/app/templates/Index.html
+++ b/app/templates/Index.html
@@ -51,7 +51,7 @@
             <p class="description">Ofrecemos soluciones personalizadas en la creación de páginas web, enfocándonos en la calidad y la originalidad.</p>
 
             <div class="buttons">
-              <a href="#projects-section" class="button order-now">Ver portafolio</a>
+              <a href="#menu" class="button order-now">Ver portafolio</a>
               <a href="#contact" class="button contact-us">Contact Us</a>
             </div>
           </div>
