--- a/app/templates/Index.html
+++ b/app/templates/Index.html
@@ -52,7 +52,7 @@
 
             <div class="buttons">
               <a href="#menu" class="button order-now">Ver portafolio</a>
-              <a href="#contact" class="button contact-us">Contact Us</a>
+              <a href="#contact" class="button contact-us">Contactanos</a>
             </div>
           </div>
           <div class="hero-image-wrapper">
