--- a/app/templates/Index.html
+++ b/app/templates/Index.html
@@ -29,9 +29,9 @@
           <li class="nav-item">
             <a href="#menu" class="nav-link">Portafolio</a>
           </li>
-          <!-- <li class="nav-item">
+          <li class="nav-item">
             <a href="#" class="nav-link">Testimonio</a>
-          </li> -->
+          </li> 
           <li class="nav-item">
             <a href="#contact" class="nav-link">Contactanos</a>
           </li>
@@ -129,7 +129,7 @@ function enableZoom(element) {
   <img class="modal-content" id="expandedImage">
   <div id="caption"></div>
 </div>
-<!--
+
       <section class="testimonials-section" id="testimonials">
         <h2 class="section-title">Testimonios</h2>
         <div class="section-content">
@@ -141,6 +141,7 @@ function enableZoom(element) {
                   <h3 class="name">Sarah Johnson</h3>
                   <i class="feedback">"Loved the French roast. Perfectly balanced and rich. Will order again!"</i>
                 </li>
+                <!--
                 <li class="testimonial swiper-slide">
                   <img src="images/user-2.jpg" alt="User" class="user-image" />
                   <h3 class="name">James Wilson</h3>
