--- a/app/templates/Index.html
+++ b/app/templates/Index.html
@@ -114,6 +114,21 @@
         </div>
         <p class="text">Proyecto colaborativo aplicado a la gestión de horarios de una empresa.</p>
       </div>
+      <div class="project-card card">
+        <h3 class="name">HanammiRopa</h3>
+        <div class="card-image image-gallery">
+          <div class="zoom-container">
+
+            <img src="{{ url_for('static', filename='img/hanami1.png' ) }}" alt="Project 2 - Image 1" class="menu-image zoom-img" />
+            <div class="zoom-icon" onclick="enableZoom(this)">🔍</div>
+          </div>
+          <div class="zoom-container">
+            <img src="{{ url_for('static', filename='img/hanami2.png' ) }}" alt="Project 2 - Image 2" class="menu-image zoom-img" />
+            <div class="zoom-icon" onclick="enableZoom(this)">🔍</div>
+          </div>
+        </div>
+        <p class="text">Participacion en creacion de una eComerce de ropa y productos variados</p>
+      </div>
     </div>
   </div>
 </section>
@@ -179,8 +194,6 @@ function enableZoom(element) {
         <div class="section-content">
           <div class="container">
             <div class="Cont">
-              <img src="{{ url_for('static', filename='Media/image.png') }}" alt="Coffee" class="hero-image">
-
                 <img class="Insta" src="{{ url_for('static', filename='/Media/icons8-instagram-300.png')}}" alt="" >
                 <h4 class="nombre" >@CodeMakers_JM</h4>
                 <a href="https://www.instagram.com/samiialvarezlondono?igsh=MWg4d2o4OW41cjh2eA==" class="boton">Instagram</a>
