--- a/app/templates/Index.html
+++ b/app/templates/Index.html
@@ -139,7 +139,7 @@ function enableZoom(element) {
                 <li class="testimonial swiper-slide">
                   <img src="images/user-1.jpg" alt="User" class="user-image" />
                   <h3 class="name">Sarah Johnson</h3>
-                  <i class="feedback">"Loved the French roast. Perfectly balanced and rich. Will order again!"</i>
+                  <i class="feedback">Gracias al software personalizado que desarrollaron para nosotros, hemos optimizado nuestros procesos internos de una manera increíble. Lo que antes nos tomaba horas, ahora lo resolvemos en minutos. El equipo realmente entendió nuestras necesidades y creó una solución intuitiva y eficiente.</i>
                 </li>
                 <!--
                 <li class="testimonial swiper-slide">
