testimonio y hanami add

--- a/app/templates/Index.html
+++ b/app/templates/Index.html
@@ -152,9 +152,9 @@ function enableZoom(element) {
             <div class="slider-wrapper">
               <ul class="testimonials-list swiper-wrapper">
                 <li class="testimonial swiper-slide">
-                  <img src="images/user-1.jpg" alt="User" class="user-image" />
-                  <h3 class="name">Sarah Johnson</h3>
-                  <i class="feedback">Gracias al software personalizado que desarrollaron para nosotros, hemos optimizado nuestros procesos internos de una manera increíble. Lo que antes nos tomaba horas, ahora lo resolvemos en minutos. El equipo realmente entendió nuestras necesidades y creó una solución intuitiva y eficiente.</i>
+                  <img src="{{ url_for('static', filename='Media/hanamiprofile.png')}}" alt="User" class="user-image" />
+                  <h3 class="name">Jessica Paola</h3>
+                  <i class="feedback">Gracias por el apoyar en la interfaz visual de nuestra pagina web eComerce. Recomendados</i>
                 </li>
                 <!--
                 <li class="testimonial swiper-slide">
