--- a/app/static/style.css
+++ b/app/static/style.css
@@ -314,6 +314,12 @@ header .navbar {
   justify-content: center;
   align-items: center;
   text-align: center;
+  padding: 30px; 
+  width: 400px;
+  border-style: solid dotted solid;
+  border-color:#000;
+  background-color: #f9f9f9;
+  border-radius: 10%;
 }
 
 .testimonials-section .testimonial .user-image {
@@ -762,7 +768,7 @@ header .navbar {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   padding: 30px; 
   width: 400px; 
-  transition: transform 0.3s; /
+  transition: transform 0.3s; 
 }
 
 .Cont:hover {
