social media agregadas

--- a/app/templates/Index.html
+++ b/app/templates/Index.html
@@ -197,13 +197,14 @@ function enableZoom(element) {
             <div class="Cont">
               <img class="Insta" src="{{ url_for('static', filename='/Media/icons8-instagram-300.png')}}" alt="" >
                 <h4 class="nombre" >@CodeMakers_JM</h4>
-                <a href="https://www.instagram.com/samiialvarezlondono?igsh=MWg4d2o4OW41cjh2eA==" class="boton">Instagram</a>
+                <a href="https://www.linkedin.com/in/yaid-santiago-mamian-giraldo-63341a29b/" class="boton">Instagram</a>
             </div>
             <div class="Cont">
-                <img class="What" src="{{ url_for('static', filename='/Media/icons8-whatsapp-300.png')}}" alt="" >
-                <h4 class="nombre" >CodeMakers JM</h4>
-                <a href="https://www.instagram.com/juancho_u1012?igsh=OGQ5ZDc2ODk2ZA==" class="boton">Whatsapp</a>
-            </div>
+              <img class="What" src="{{ url_for('static', filename='/Media/icons8-whatsapp-300.png')}}" alt="" >
+              <h4 class="nombre">CodeMakers JM</h4>
+              <a href="{{ url_for('whatsapp') }}" class="boton">Whatsapp</a>
+          </div>
+          
         </div>
         
       </section>
