--- a/app/templates/Index.html
+++ b/app/templates/Index.html
@@ -192,7 +192,7 @@ function enableZoom(element) {
 
       <section class="contact-section" id="contact">
         <h2 class="section-title">Contactanos</h2>
-        <div class="section-content">
+        <div class="section-caontent">
           <div class="container">
             <div class="Cont">
               <img class="Insta" src="{{ url_for('static', filename='/Media/icons8-instagram-300.png')}}" alt="" >
