section redirect solucionado

--- a/app/templates/Index.html
+++ b/app/templates/Index.html
@@ -30,10 +30,10 @@
             <a href="#menu" class="nav-link">Portafolio</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Testimonio</a>
+            <a href="#testimonios" class="nav-link">Testimonio</a>
           </li> 
           <li class="nav-item">
-            <a href="#contact" class="nav-link">Contactanos</a>
+            <a href="#contactanos" class="nav-link">Contactanos</a>
           </li>
         </ul>
 
@@ -49,10 +49,9 @@
             <h2 class="title">CodeMakers JM</h2>
             <h3 class="subtitle">Transformamos tus ideas en soluciones web innovadoras</h3>
             <p class="description">Ofrecemos soluciones personalizadas en la creación de páginas web, enfocándonos en la calidad y la originalidad.</p>
-
             <div class="buttons">
               <a href="#menu" class="button order-now">Ver portafolio</a>
-              <a href="#contact" class="button contact-us">Contactanos</a>
+              <a href="#contactanos" class="button contact-us">Contactanos</a>
             </div>
           </div>
           <div class="hero-image-wrapper">
@@ -145,7 +144,7 @@ function enableZoom(element) {
   <div id="caption"></div>
 </div>
 
-      <section class="testimonials-section" id="testimonials">
+      <section class="testimonials-section" id="testimonios">              
         <h2 class="section-title">Testimonios</h2>
         <div class="section-content">
           <div class="slider-container swiper">
@@ -190,7 +189,7 @@ function enableZoom(element) {
         </div>
       </section>
 
-      <section class="contact-section" id="contact">
+      <section class="contact-section" id="contactanos">
         <h2 class="section-title">Contactanos</h2>
         <div class="section-caontent">
           <div class="container">
