implementacion de el sistema de reseñas, css,html y ruta flask(tambien se implemento base de datos para almacenar las reseñas)

--- a/app/templates/Index.html
+++ b/app/templates/Index.html
@@ -30,7 +30,7 @@
             <a href="#menu" class="nav-link">Portafolio</a>
           </li>
           <li class="nav-item">
-            <a href="#testimonios" class="nav-link">Testimonio</a>
+            <a href="#resenas" class="nav-link">Reseñas</a>
           </li> 
           <li class="nav-item">
             <a href="#contactanos" class="nav-link">Contactanos</a>
@@ -144,8 +144,8 @@ function enableZoom(element) {
   <div id="caption"></div>
 </div>
 
-      <section class="testimonials-section" id="testimonios">              
-        <h2 class="section-title">Testimonios</h2>
+      <section class="testimonials-section" id="resenas">              
+        <h2 class="section-title">RESEÑAS</h2>
         <div class="section-content">
           <div class="slider-container swiper">
             <div class="slider-wrapper">
@@ -185,6 +185,7 @@ function enableZoom(element) {
               <div class="swiper-slide-button swiper-button-prev"></div>
               <div class="swiper-slide-button swiper-button-next"></div>
             </div>
+            <button class="boton" onclick="window.location.href='/reseña'">DEJANOS UNA RESEÑA</button>
           </div>
         </div>
       </section>
